test
pipe.c:90:6: error: conflicting types for 'no_pipe'
int             no_pipe(char **args, t_edlist *vals)
                ^
./minishell.h:64:6: note: previous declaration is here
int             no_pipe(char **args, t_edlist *vals, char **paths);
                ^
pipe.c:173:35: error: too few arguments to function call, expected 3, have 2
                rv = no_pipe(args_array[0], vals);
                     ~~~~~~~                    ^
./minishell.h:64:1: note: 'no_pipe' declared here
int             no_pipe(char **args, t_edlist *vals, char **paths);
^
pipe.c:199:44: error: too few arguments to function call, expected 3, have 2
                                no_pipe(args_array[com_num -i -1], vals);
                                ~~~~~~~                                ^
./minishell.h:64:1: note: 'no_pipe' declared here
int             no_pipe(char **args, t_edlist *vals, char **paths);
^
pipe.c:212:6: error: conflicting types for 'yes_pipe'
int             yes_pipe(char **args, t_edlist *vals, int pipe_count)
                ^
./minishell.h:65:6: note: previous declaration is here
int             yes_pipe(char **args, t_edlist *vals, char **paths, int pipe_count);
                ^
4 errors generated.
make: *** [pipe.o] Error 1
